# chess

./: .gitignore  CLAUDE.md  README.md  pyproject.toml
chess_rl/: config.py
chess_rl/configs/: default.yaml
chess_rl/engine/: action_space.py  board.py
chess_rl/eval/: arena.py
chess_rl/mcts/: __init__.py  node.py  search.py
chess_rl/model/: network.py
chess_rl/rollout/: game.py  online_value_policy.py  policy.py  replay_buffer.py
chess_rl/utils/: checkpoint.py  repro.py  run.py
chess_rl/viz/: game_record.py  play_session.py  server.py
chess_rl/viz/static/: app.js  board.js  index.html  play.html  play.js  style.css
docs/: IDEAS.md
scripts/: generate_sample_game.py  serve_viz.py  smoke_run.py
tests/: test_arena.py  test_checkpoint.py  test_engine.py  test_mcts.py  test_online_value_policy.py  test_play_api.py  test_replay_buffer.py  test_repro.py  test_rollout.py  test_viz.py  test_viz_e2e.py
