[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "chess_rl"
version = "0.1.0"
description = "AlphaZero-style self-play chess RL (hobby project)"
requires-python = ">=3.11"
dependencies = [
    "torch",
    "python-chess",
    "numpy",
    "tqdm",
    "pyyaml",
    "tensorboard",
]

[project.optional-dependencies]
dev = [
    "pytest",
    "ruff",
    "httpx2",
    "playwright",
]
viz = [
    "fastapi",
    "uvicorn",
]

[tool.setuptools.packages.find]
include = ["chess_rl*"]

[tool.setuptools.package-data]
"chess_rl.viz" = ["static/*"]
